# PinterestClone

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend-pinterest/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
backend-pinterest/.github/workflows/: main.yaml
backend-pinterest/migrations/: env.py
backend-pinterest/migrations/versions/: 0ea1e15f839e_.py  1e707cf62e1e_fresh_tables.py  40e8feac8802_refresh_table.py  587b654623c0_init_pincommentlike_table.py  6b08e7f5d8df_add_email_notifications_enabled_to_users.py  74420e0add92_.py  79cc0114fe2c_comments_table.py  8f3c2a1d9b7e_add_missing_pin_counters.py  a1c4d6e8f9b2_add_generated_pins_table.py  b2d7f0a9c3e1_add_pin_moderation_trust_tables.py  c4e9b8a7d6f1_add_ai_operations_table.py  cbb2cca41b2f_add_likes_to_pins.py  d9a4b7c2e6f3_add_generated_pin_moderation.py  e1f547eabcd8_init_tables.py  e5f6a7b8c9d0_add_ai_usages_table.py
backend-pinterest/nginx/: nginx.conf
backend-pinterest/src/: database.py  main.py
backend-pinterest/src/ai/: models.py  prompts.py  quota.py  repository.py  router.py  safety.py  schemas.py  service.py  tracking.py
backend-pinterest/src/auth/: google_auth.py  repository.py  router.py  service.py
backend-pinterest/src/boards/: models.py  repository.py  router.py  schemas.py  service.py
backend-pinterest/src/core/: auth.py  cache.py  clarifai.py  config.py  dependencies.py  exception.py  limiter.py  logger.py  s3.py  security.py  session.py
backend-pinterest/tests/: conftest.py
frontend-pinterest/: index.html  (+4 more)
(+113 files in other folders)
